# bencher

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tyignore  AGENTS.md  ARCHITECTURE_DIAGRAM.md  BENCH_CFG_SPLIT_PLAN.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  LLM_BENCHMARK_GUIDE.md  MANIFEST.in  PERFORMANCE_PLAN.md  PLAN.md  PLAN_rerun_backend.md  PROMPT.md  README.md  README_CLEANUP_PROPOSAL.md  REFACTORING_QUICK_REFERENCE.md  RENAME_PLAN.md  RESULTS_VISUALIZATION_CLEANUP_PROPOSAL.md  SAVE_PERFORMANCE_REPORT.md  ai-agent-task.txt  analyze_animation.py  bencher.deps.yaml  detailed_analysis.py  detailed_analysis2.py  plan.md  poc_adapter_interface.py  pyproject.toml  ralph.yml  rockerc.yaml  test_2_second_timing.py  test_centering_verification.py  test_dummy_planner_sweep.py  test_generic_fix.py  test_labels.py  test_normal_animation.py  test_rerun_integration.py  test_smooth_transition.py  (+5 more)
.claude/: handover_over_time_slider.md
.claude/commands/: fix-issue.md  monitor-pr.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  devcontainer.yml  perf-track.yml  performance.yml  prek.yaml
bencher/: __init__.py  bench_cfg.py  bench_plot_server.py  bench_report.py  bench_runner.py  bencher.py  cache_management.py  caching.py  ci.py  factories.py  file_server.py  git_info.py  job.py  optuna_conversions.py  perf_tracker.py  plt_cfg.py  regression.py  render.py  report_export.py  result_bool.py  result_collector.py  run.py  sampling_strategy.py  sampling_strategy_simple.py  simple_sampling.py  store.py  sweep_executor.py  sweep_timings.py  test_timing_report.py  utils.py  utils_pandas_compat.py  utils_rerun.py  utils_rrd.py  video_writer.py  worker_job.py  worker_manager.py
bencher/bench_cfg/: __init__.py  bench_cfg_class.py  cache_cfg.py  dims_cfg.py  display_cfg.py  execution_cfg.py  run_cfg.py  server_cfg.py  time_cfg.py  visualization_cfg.py
bencher/example/: benchmark_data.py  example_agg_over_time.py  example_all.py  example_benchable_fluent.py  example_benchrunner.py  example_bool_result.py  example_cartesian_animation.py  example_cartesian_grid.py  example_cat2_scatter_jitter.py  example_categorical.py  example_collect_render.py  (+79 more)
docs/: concepts.md  conda-environment.yml  conf.py  how_to_use_bencher.md  index.md  intro.md  over_time_slider_fix.md  plan_manim_backend.md  plot_plugin_design.md  requirements.txt
latest/: SimpleFloat_example_simple_float_2026-03-22.html  SimpleFloat_example_simple_float_2026-03-23.html  SimpleFloat_example_simple_float_2026-03-24.html  SimpleFloat_example_simple_float_2026-03-25.html  SimpleFloat_example_simple_float_2026-03-26.html  SimpleFloat_example_simple_float_2026-03-27.html  SimpleFloat_example_simple_float_2026-03-28.html  SimpleFloat_example_simple_float_2026-03-29.html  SimpleFloat_example_simple_float_2026-03-30.html  SimpleFloat_example_simple_float_2026-03-31.html  SimpleFloat_example_simple_float_2026-04-01.html  SimpleFloat_example_simple_float_2026-04-02.html  SimpleFloat_example_simple_float_2026-04-03.html  SimpleFloat_example_simple_float_2026-04-04.html  SimpleFloat_example_simple_float_2026-04-05.html  SimpleFloat_example_simple_float_2026-04-06.html  SimpleFloat_example_simple_float_2026-04-07.html  SimpleFloat_example_simple_float_2026-04-08.html  SimpleFloat_example_simple_float_2026-04-09.html  SimpleFloat_example_simple_float_2026-04-11.html  SimpleFloat_example_simple_float_2026-04-12.html  SimpleFloat_example_simple_float_2026-04-15.html  SimpleFloat_example_simple_float_2026-04-18.html  SimpleFloat_example_simple_float_2026-04-19.html  SimpleFloat_example_simple_float_2026-04-20.html  SimpleFloat_example_simple_float_2026-04-21.html  SimpleFloat_example_simple_float_2026-04-22.html  SimpleFloat_example_simple_float_2026-04-25.html  SimpleFloat_example_simple_float_2026-04-26.html  SimpleFloat_example_simple_float_2026-04-27.html  SimpleFloat_example_simple_float_2026-05-14.html  SimpleFloat_example_simple_float_2026-05-15.html  SimpleFloat_example_simple_float_2026-05-16.html  SimpleFloat_example_simple_float_2026-06-01.html  SimpleFloat_example_simple_float_2026-06-02.html  SimpleFloat_example_simple_float_2026-06-04.html  SimpleFloat_example_simple_float_2026-06-08.html  SimpleFloat_example_simple_float_2026-06-09.html  SimpleFloat_example_simple_float_2026-06-10.html  SimpleFloat_example_simple_float_2026-06-11.html  (+7 more)
plans/: 01-release-safety.md  02-pr-triage.md  03-repo-hygiene.md  04-dependencies.md  05-test-coverage.md  06-docs-onboarding.md  07-core-cleanup.md  08-core-refactors.md  README.md
reports/: SimpleFloat_example_simple_float_2026-03-04.html
scripts/: benchmark_save.py  regenerate_plotly_examples.py  setup_host.sh
specs/: 01_overview.md  02_directory_structure.md  03_data_flow.md  04_class_hierarchy.md  05_parameter_system.md  06_results_system.md  07_caching.md  08_execution_model.md  09_configuration.md  10_integrations.md  11_dependency_graph.md  12_examples_and_docs.md  13_architecture_summary.md  README.md  implementation_summary.md  result_extension_system.md
test/: conftest.py  helpers.py  test_axis_units.py  test_band_result.py  test_bar_result.py  test_bench_cfg.py  test_bench_examples.py  test_bench_report.py  test_bench_result.py  test_bench_result_base.py  test_bench_runner.py  test_bench_runner_copy.py  test_bencher.py  test_benchmark_method.py  test_biology_examples.py  test_bn_p.py  test_box_whisker_result.py  test_cache.py  test_cache_management.py  test_cartesian_pil_renderer.py  test_chemistry_examples.py  test_ci.py  test_class_enum.py  test_combinations.py  test_composable_container_dataframe.py  test_composable_container_dataset.py  test_composable_container_integration.py  test_composable_container_panel.py  test_composable_container_video.py  test_curve_overlay_groupby.py  test_curve_result.py  test_dataset_result.py  test_docs_scrollbars.py  test_dynamic_sentinel.py  test_engineering_examples.py  test_explorer_result.py  test_extensions.py  test_extra_panels.py  test_factories.py  test_file_server.py  (+73 more)
(+3201 files in other folders)
