[project]
name = "holobench"
version = "1.58.1"

authors = [{ name = "Austin Gregg-Smith", email = "blooop@gmail.com" }]
description = "A package for benchmarking the performance of arbitrary functions"
readme = "README.md"
license = "MIT"

requires-python = ">=3.10,<3.14"

dependencies = [
    "holoviews>=1.15,<=1.21.0",
    "numpy>=1.0,<=2.2.6",
    "param>=1.13.0,<=2.2.1",
    "hvplot>=0.12.0,<=0.12.1",
    "panel>=1.3.6,<=1.8.2",
    "diskcache>=5.6,<=5.6.3",
    "optuna>=3.2,<=4.5.0",
    "xarray>=2023.7,<=2025.6.1",
    "plotly>=5.15,<=6.3.1",
    "pandas>=2.0,<=2.3.3",
    "strenum>=0.4.0,<=0.4.15",
    "scikit-learn>=1.2,<=1.7.2",
    "moviepy>=2.1.2,<=2.2.1",
]

[project.urls]
Repository = "https://github.com/blooop/bencher"
Home = "https://github.com/blooop/bencher"
Documentation = "https://bencher.readthedocs.io/en/latest/"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
libc = "2.31"

[tool.pixi.dependencies]
python = ">=3.10"
sqlite = "==3.48.0"
shellcheck = ">=0.10.0,<0.11"
pre-commit = "==4.3.0"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"


[tool.pixi.pypi-dependencies]
holobench = { path = ".", editable = true }

[project.optional-dependencies]
test = [
    "pylint>=3.2.5,<=4.0.4",
    "pytest-cov>=4.1,<=7.0.0",
    "pytest>=7.4,<=9.0.2",
    "hypothesis>=6.104.2,<=6.148.8",
    "ruff>=0.5.0,<=0.14.10",
    "coverage>=7.5.4,<=7.13.0",
    "ty",
    "nbformat",
    "ipykernel",
    "pip",
    "jupyter_bokeh",
]

#adds support for embedding rerun windows (alpha)
rerun = ["rerun-sdk>=0.24.0", "rerun-notebook", "flask", "flask-cors"]

#unused for the moment but may turn on later
# scoop = ["scoop>=0.7.0,<=0.7.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bencher", "CHANGELOG.md"]

# Environments
[tool.pixi.environments]
default = { features = ["test", "rerun"], solve-group = "default" }
py310 = ["py310", "test", "rerun"]
py311 = ["py311", "test", "rerun"]
py312 = ["py312", "test", "rerun"]
py313 = ["py313", "test", "rerun"]


[tool.pixi.tasks]
#AI AGENT TASKS

#use this task to test any changes to the code, it will run docs, lint, and tests. 
agent-iterate = { depends-on = [
    "generate-docs",
    "ci",
    "git-commit-all",
    "fix-commit-push",
] }

pre-commit = "pre-commit run -a"
pre-commit-update = "pre-commit autoupdate"
format = "ruff format ."
check-clean-workspace = "git diff --exit-code"
ruff-lint = "ruff check . --fix"
pylint = "pylint --version && echo 'running pylint...' && pylint $(git ls-files '*.py')"
ty-check = "ty check --respect-ignore-files ."
lint = { depends-on = ["ruff-lint", "pylint", "ty-check"] }
style = { depends-on = ["format", "lint"] }
commit-format = "git commit -a -m'autoformat code' || true"
test = "pytest"
coverage = "coverage run -m pytest && coverage xml -o coverage.xml"
coverage-report = "coverage report -m"
update-lock = "pixi update && git commit -a -m'update pixi.lock' || true"
push = "git push"
update-lock-push = { depends-on = ["update-lock", "push"] }
fix = { depends-on = ["update-lock", "format", "ruff-lint", "pre-commit"] }
fix-commit-push = { depends-on = ["fix", "commit-format", "update-lock-push"] }
ci-no-cover = { depends-on = ["style", "test"] }
ci = { depends-on = [
    "format",
    "ruff-lint",
    "pylint",
    "ty-check",
    "coverage",
    "coverage-report",
] }
git-commit-all = "git add -A && git commit -m 'Add all untracked files' || true"
ci-push = { depends-on = ["format", "ruff-lint", "update-lock", "ci", "push"] }
clear-pixi = "rm -rf .pixi pixi.lock"
setup-git-merge-driver = "git config merge.ours.driver true"
update-from-template-repo = "./scripts/update_from_template.sh"

generate-docs = "python bencher/example/meta/generate_examples.py"
docs = "rm -rf docs/builtdocs; rm -rf docs/jupyter_execute; sphinx-build -b html docs docs/builtdocs"


#demos
demo = "python3 bencher/example/example_image.py"
demo_rerun = "python3 bencher/example/example_rerun.py"


[tool.pylint]
extension-pkg-whitelist = ["numpy", "scipy"]
jobs = 16                                    #detect number of cores
ignore-paths = "docs/*"

[tool.pylint.'MESSAGES CONTROL']
disable = "C,logging-fstring-interpolation,line-too-long,fixme,missing-module-docstring,too-many-instance-attributes,too-few-public-methods,too-many-arguments,too-many-locals,too-many-branches,too-many-statements,use-dict-literal,duplicate-code,too-many-public-methods,too-many-nested-blocks,cyclic-import,too-many-positional-arguments"
enable = "no-else-return,consider-using-in"

[tool.coverage.run]
omit = ["*/test/*", "__init__.py"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if False:",
    "if 0:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "(_):",
]

[tool.pytest.ini_options]
tmp_path_retention_count = 0

[tool.ty.rules]
# Ignore type errors related to param library descriptors
invalid-assignment = "ignore"
# Ignore argument type mismatches (many false positives with param library)
invalid-argument-type = "ignore"
# Ignore unresolved attributes (param descriptors create dynamic attributes)
unresolved-attribute = "ignore"
# Ignore invalid type forms (pn.panel is a function, not a type)
invalid-type-form = "ignore"
# Ignore return type mismatches
invalid-return-type = "ignore"
# Ignore non-subscriptable errors
non-subscriptable = "ignore"
# Ignore possibly missing attributes (Union type issues)
possibly-missing-attribute = "ignore"
# Ignore unsupported operator errors
unsupported-operator = "ignore"
# Ignore positional argument count errors
too-many-positional-arguments = "ignore"
missing-argument = "ignore"
# Ignore not-iterable errors (Union types)
not-iterable = "ignore"
# Ignore overload matching errors
no-matching-overload = "ignore"
# Ignore call-non-callable errors
call-non-callable = "ignore"
# Ignore method override errors
invalid-method-override = "ignore"
# Ignore import/reference resolution errors
unresolved-import = "ignore"
unresolved-reference = "ignore"
